# dmenu

./: CMakeLists.txt
dmenu/include/: config.h
